# exa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  exa.py  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gcloud/server/: Dockerfile
.github/workflows/: cd.yml  ci.yml  release.yml  shell.yml  update_pr.yml
docs/: deploying.md
server/: asgi.py  settings.py
server/example/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py
server/example/management/commands/: try_failing_on_demand_task.py  try_subscription_task.py  try_successful_on_demand_task.py
server/example/migrations/: 0001_initial.py
terraform/: .gitignore  README.md  artefact_registry.tf  cloud_run.tf  databases.tf  iam.tf  main.tf  secrets.tf  storage.tf  tasks.tf  variables.tf
