[tool.poetry]
name = "exa"
version = "0.2.1"
description = ""
authors = ["Tom Clark <tom@octue.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9,<3.11"
Django = ">=3.0,<4.0"
django-gcp = "^0.7.3"
django-twined = {git = "https://github.com/octue/django-twined.git", rev = "use-octue-without-answer-topics"}
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.5"
click = "^8.1.3"
channels = "^3"
django-environ = "^0.9.0"

[tool.poetry.group.dev.dependencies]
codecov = "^2.1.10"
coverage= "5.3"  # https://github.com/nedbat/coveragepy
django-coverage-plugin="^1.8.0"  # https://github.com/nedbat/django_coverage_plugin
django-debug-toolbar="3.7"  # https://github.com/jazzband/django-debug-toolbar
icecream="2.1.0"
pre-commit = "^2.20.0"  # https://pre-commit.com/hooks.html
pylint-django = "^2.5.3"
pytest="6.1.2"  # https://github.com/pytest-dev/pytest
pytest-sugar="0.9.4"  # https://pivotfinland.com/pytest-sugar/
pytest-django="4.1.0"  # https://github.com/pytest-dev/pytest-django
pytest-asyncio="0.14.0"  # https://github.com/pytest-dev/pytest-asyncio
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
exa = "exa:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
